error component added

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -21,7 +21,7 @@
     text-align: center;
     font-size: medium;
 }
-#refresh{
+.refresh{
     background-color: transparent;
     border: 0px;
     padding: 2px;
